# nanotrainer

./: .gitignore  README.md  main.py  pyproject.toml
docs/zh/strategy/: base.md  lr_scheduler.md
nanotrainer/: __init__.py
nanotrainer/callback/: base.py  checkpoint.py  default.py  logging.py
nanotrainer/experiment/: config.py  cv.py
nanotrainer/state/: state.py
nanotrainer/strategy/: base.py  lr_scheduler.py  single.py
nanotrainer/trainer/: trainer.py
test/: test_lenet5.py
