[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanotrainer"
version = "0.1.0"
description = "A lightweight and flexible deep learning trainer framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apach-2.0"}
authors = [
    {name = "lemonmindyes", email = "1837669410@qq.com"}
]

dependencies = [
    "torch >= 2.9",
]

[project.urls]
Homepage = "https://github.com/gaogaotiantian/objprint"

[tool.setuptools.dynamic]
version = {attr = "objprint.__version__"}
